--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <!-- Tab Content -->
         <div id="leaderboard-content">
             <div id="daily-leaderboard" class="leaderboard-tab-content active">
-                <h4 class="text-center">Daily Leaderboard</h4>
+                <h4 class="text-center">Weekly Leaderboard</h4>
                 <div class="leaderboard-row"></div>
             </div>
             <div id="monthly-leaderboard" class="leaderboard-tab-content">
