--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="container">
         <!-- Tabs -->
         <div class="tabs">
-            <button class="btn btn-primary" id="daily-btn">Daily</button>
+            <button class="btn btn-primary" id="daily-btn">Weekly</button>
             <button class="btn btn-secondary" id="monthly-btn">Monthly</button>
             <button class="btn btn-success" id="yearly-btn">Yearly</button>
         </div>
